some lil fixes - description order on mobile, footer text and when to break into mobile :blush:

--- a/styles/partials/components/_description.scss
+++ b/styles/partials/components/_description.scss
@@ -8,6 +8,7 @@
     right: 10%;
     z-index: 10;
     display: none;
+    order: -1;
 
     @include media (1050px) {
         top: 0;
@@ -23,6 +24,7 @@
         top: 0;
         left: 0;
         transform: translate(0, 0);
+
     }
 
     .paragraph {
