--- a/styles/partials/pages/_index.scss
+++ b/styles/partials/pages/_index.scss
@@ -1,7 +1,7 @@
 body {
     height: 100vh;
 
-    @include media (700px){
+    @include media (870px){
         height: auto;
     }
 }
@@ -12,7 +12,7 @@ body {
     display: flex;
     justify-content: space-between;
 
-    @include media (700px){
+    @include media (870px){
         height: auto;
         max-height: none;
         flex-direction: column;
@@ -25,7 +25,7 @@ body {
             width: 55%;
         }
 
-        @include media (700px) {
+        @include media (870px) {
             height: auto;
             width: 100%;
         }
@@ -38,7 +38,7 @@ body {
             width: 40%;
         }
 
-        @include media (700px) {
+        @include media (870px) {
             height: auto;
             width: 100%;
             order: -1;
